Mobile view fixed image and text aligned. Pixel values changed to vw.

--- a/frontend-next-migration/src/preparedPages/AboutPage/ui/About.module.scss
+++ b/frontend-next-migration/src/preparedPages/AboutPage/ui/About.module.scss
@@ -111,7 +111,7 @@
 .yearImgWrap {
     position: relative;
     width: 100%;
-    max-width: 420px;
+    max-width: 34vw;
     aspect-ratio: 16 / 9;
     border-radius: var(--corner-radius-web);
     overflow: hidden;
@@ -120,13 +120,16 @@
     margin: 0 0 var(--spacing-400) 0;
 
     @media (max-width: breakpoint(sm)) {
-        max-width: 94%;
-        margin-left: 3%;
+        max-width: none;
+        margin-left: 10%;
+        width: 90%;
     }
 }
 
 .yearImg {
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .h1 {
